--- a/usuarios/usuarios.html
+++ b/usuarios/usuarios.html
@@ -71,7 +71,7 @@ include "../protecao.php";
     
     <main>
 <!--Botão de cadastro de usuário-->
-      <div class="BtnCadastrar">
+      <div class="botao">
          <a href="cadastrarusuario.php" class="LinkCentrado">Cadastrar usuário</a>
       </div>
 
