--- a/home.html
+++ b/home.html
@@ -76,7 +76,7 @@ include "conexao-banco/conexao.php";
           <h3>Olá, <?php echo $_SESSION['nome']; ?>, <br> Seja bem-vindo!</h3> 
         </div>
         <div class="linhavaliar">
-            <p>AVALIAR</p>
+            <p>ㅤㅤㅤㅤㅤㅤAVALIARㅤㅤㅤㅤㅤㅤ</p>
            </div>
         <div class="avaliar">
            <?php
