--- a/usuarios/usuarios.html
+++ b/usuarios/usuarios.html
@@ -80,7 +80,7 @@ include "../protecao.php";
     <div class="busca">
         <form action="" method="GET" class="search-form">
             <input type="text" name="busca" placeholder="PESQUISAR USUARIOS">
-            <button type="submit"><img src="P:\giovana\tcc\administrador\imagens\icons" alt="search-alt" /></button>
+            <button type="submit">PESQUISAR</button>
         </form>
     </div>
 </div>
