avaliar.css avaliar.html
tentativa de deixar responsivo

--- a/avaliar.html
+++ b/avaliar.html
@@ -21,20 +21,19 @@ include "conexao-banco/conexao.php";
 </head>
 <body>
 
-  <p>ㅤㅤㅤㅤㅤㅤAVALIAR RESENHAㅤㅤㅤㅤㅤㅤ</p>
+  <p class="avaliaresenha">ㅤㅤㅤㅤㅤAVALIAR RESENHAㅤㅤㅤㅤㅤ</p>
   <div class="cardazul">
-   
-<p>{$row['resenha_titulo']}</p>
-<div class="cardbranco">
-<p>{$row['livro_sinopse']}</p>
-</div>
-<class class="resenha">
-  <div class="cardbranco">
-<p>{$row['resenha_texto']}</p>
-</div>
-<p>{$row['res_nome_fantasia']}</p>
-</class>
-<form action='enviar-avaliacao.php?id={$dado}' method='post'>
+        <p>{$row['resenha_titulo']}</p>
+      <div class="cardbranco1">
+        <p>{$row['livro_sinopse']}</p>
+      </div>
+      <p>RESENHA</p>
+      <div class="cardbranco2">
+       <p>{$row['resenha_texto']}</p>
+      </div>
+       <p>{$row['res_nome_fantasia']}</p>
+
+    <form action='enviar-avaliacao.php?id={$dado}' method='post'>
         <select name='avaliar' required>
             <option value=''>Avaliar</option>
             <option value='1'>Reprovada</option>
@@ -42,7 +41,7 @@ include "conexao-banco/conexao.php";
             <option value='2'>Aprovada</option>
         </select>
         <input type='submit' value='enviar'>
-  </form>
+    </form>
 </div>
 </body>
 </html>
@@ -53,14 +52,6 @@ include "conexao-banco/conexao.php";
 
 ?>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
 </body>
+
 </html>
