--- a/home.html
+++ b/home.html
@@ -100,6 +100,48 @@ include "conexao-banco/conexao.php";
            </a>
         </div>
     </div>
+    <div class='card'>
+        <div>
+            <img  src='../administrador/imagens/livros/{$resposta['livro_foto']}' alt='' >
+        </div>
+        <div>
+            <p>{$resposta['resenha_titulo']}</p>
+            <p>{$resposta['res_nome_fantasia']}</p>
+        </div>
+        <div>
+           <a href='avaliar.php?id={$resposta['resenha_id']}'>
+              <button class='botao'>Avaliar</button>
+           </a>
+        </div>
+    </div>
+    <div class='card'>
+        <div>
+            <img  src='../administrador/imagens/livros/{$resposta['livro_foto']}' alt='' >
+        </div>
+        <div>
+            <p>{$resposta['resenha_titulo']}</p>
+            <p>{$resposta['res_nome_fantasia']}</p>
+        </div>
+        <div>
+           <a href='avaliar.php?id={$resposta['resenha_id']}'>
+              <button class='botao'>Avaliar</button>
+           </a>
+        </div>
+    </div>
+    <div class='card'>
+        <div>
+            <img  src='../administrador/imagens/livros/{$resposta['livro_foto']}' alt='' >
+        </div>
+        <div>
+            <p>{$resposta['resenha_titulo']}</p>
+            <p>{$resposta['res_nome_fantasia']}</p>
+        </div>
+        <div>
+           <a href='avaliar.php?id={$resposta['resenha_id']}'>
+              <button class='botao'>Avaliar</button>
+           </a>
+        </div>
+    </div>
                     ";
                 }
             }
